2014-03-14  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	[BZ #16706]
	* sysdeps/powerpc/powerpc64/fpu/s_nearbyintl.S: Remove wrong
	implementation.
	* math/libm-test.inc (nearbyint_test_data): Add more tests.

2014-03-14  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	[BZ #16701]
	* sysdeps/powerpc/powerpc64/fpu/s_ceill.S: Remove wrong
	implementation.
	* math/libm-test.inc (ceil_test_data): Add more tests.

2014-03-14  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* math/libm-test.inc (trunc_test_data): Add more tests related to
	BZ#16414.

2014-03-12  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	[BZ #16689]
	* sysdeps/powerpc/powerpc32/power4/multiarch/bzero-ppc32.S
	(__bzero_ppc): Call memset@local instead of __memset_ppc@local for
	static build.
	* sysdeps/powerpc/powerpc32/power4/multiarch/bzero.c: Build IFUNC
	selector for static builds.

2014-03-12  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc64/multiarch/strspn.c (strspn): Build IFUNC
	selector for static builds.

2014-03-11  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	[BZ #16683]
	* sysdeps/powerpc/powerpc64/multiarch/memset-ppc64.S (__bzero_ppc):
	Define it for static builds as well.
	(NO_BZERO_IMPL): Likewise.

2014-03-11  Vidya Ranganathan  <vidya@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc64/power7/strspn.S: New file: Optimization.
	* sysdeps/powerpc/powerpc64/multiarch/strspn.c: New file:
	multiarch strspn for PPC64.
	* sysdeps/powerpc/powerpc64/multiarch/strspn-ppc64.c: New file
	* sysdeps/powerpc/powerpc64/multiarch/strspn-power7.S: New file
	* sysdeps/powerpc/powerpc64/multiarch/ifunc-impl-list.c:
	(__libc_ifunc_impl_list): Likewise.
	* sysdeps/powerpc/powerpc64/multiarch/Makefile: Add strspn
	multiarch optimizations
	* string/strspn.c (strspn): Using macro to redefine symbol name.

2014-03-10  Vidya Ranganathan  <vidya@linux.vnet.ibm.com>
	    Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
